atualizando capa e cor no site

--- a/Index.htm
+++ b/Index.htm
@@ -4,15 +4,16 @@
     <meta charset='utf-8'>
 
     <title>icebook</title>
-
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <ing class="capa" src="capa.jpg">
     <h1>Sorveteria Icebook</h1>
 
    <p>Sorvetes com sabores diferenciados com os melhores produtos, sabores sem <strong>glúten, lactose e veganos</strong>,
      livros de todas as categorias e açai com misturas diferenciadas.</p>
 
-   <p>Fazer você ter uma nova experiência com os sabores que criamos e ter uma leitura
+   <p>Fazer você ter uma <u>nova experiência com os sabores que criamos</u> e ter uma leitura
     mais refrescante assim como nosso sorvete e açai.</p>
 
    <p style="font-size: 25px;"><em>Venham conhecer a sorevteria que realiza seus desejos.</em></p>
