--- a/Index.htm
+++ b/Index.htm
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <ing class="capa" src="capa.jpg">
+    <img class="capa" src="capa.jpg">
     <h1>Sorveteria Icebook</h1>
 
    <p>Sorvetes com sabores diferenciados com os melhores produtos, sabores sem <strong>glúten, lactose e veganos</strong>,
