--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset='utf-8'>
-    <title>icebook</title>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>LOVE & COFFE</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-  <header>
-  </header>
-  <main>
-    <img class="capa" src="capa.jpg">
-    <h1>Sorveteria Icebook</h1>
-    <p>Sorvetes com sabores diferenciados com os melhores produtos, sabores sem <strong>glúten, lactose e veganos</strong>,
-        livros de todas as categorias e açai com misturas diferenciadas.</p>
-    <p>Fazer você ter uma <u>nova experiência com os sabores que criamos</u> e ter uma leitura
-        mais refrescante assim como nosso sorvete e açai.</p>
-    <p style="font-size: 25px;"><em>Venham conhecer a sorevteria que realiza seus desejos.</em></p>
-    <div class="beneficios">
-      <h2>Benefícios ICEBOOK</h2>
-      <ul>
-        <li>Lugar aconchegante</li>
-        <li>Livros atualizados</li>
-        <li>desconto para estudantes</li>
-        <li>30% de desconto para freguês</li> 
-        <li>poder conhecer o mundo literário</li>
-      </ul>
-      <img class="foto-beneficios" src="foto beneficios.jpg">
-    </div>
-  </main>
-  <footer>
-  </footer>
+<body> 
+    <header>
+
+    </header>
+    <main>
+    <div class="principal">
+        <img class="capa" src="capa.jpg">
+     <h1>LOVE & COFFE</h1>
+
+        <p>Em nosso book coffe você pode tomar um <strong>delicioso café</strong> enquanto relaxa lendo um livro ou até mesmo passando um tempo com os amigos.</p>
+        <p>Queremos proporcionar para você <u>momentos inesqueciveis</u> e memórias felizes.</p>
+        <p><em>Venha conhecer nossa infinidade de livros e nosso incrivel cardápio.</em></p>
+        </div>
+
+        <div class="beneficios">
+        <h2>Benefícios da LOVE & COFFE:</h2>
+        <ul>
+            <li>Comidas feitas na hora</li>
+            <li>Ambiente relaxante</li>
+            <li>Livros de todos os genêros</li>
+        </ul>
+        <img class="foto-beneficios" src="foto-beneficios.jpg">
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
